Table Cashier {
  Id int [pk, increment] /
  FirstName varchar [not null] 
  LastName varchar [not null] 
}

Table Product {
  Id int [pk, increment]
  ProductName varchar [not null]
  Price decimal [not null]
  Brand varchar [not null]
  CategoryId int [ref: > Category.Id, not null] 
}

Table Category {
  Id int [pk, increment]
  CategoryName varchar [not null]
}

Table Order {
  Id int [pk, increment]
  CashierId int [ref: > Cashier.Id, not null] 
  PaidOnDate datetime [null] 
}

Table OrderProduct {
  ProductId int [ref: > Product.Id, not null] 
  OrderId int [ref: > Order.Id, not null] 
  Quantity int [not null]
}


Ref: Order.CashierId > Cashier.Id 
Ref: Product.CategoryId > Category.Id 
Ref: OrderProduct.(ProductId, OrderId) > Order.Id 